--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "cb2p": "^1.1.1",
     "es6-string-html-template": "^1.0.2",
+    "glob": "^7.1.2",
     "gulp": "^3.9.1",
     "gulp-cli": "^2.0.1",
     "gulp-util": "^3.0.8",
-    "nspack": "*",
+    "nspack": "^9.1.3",
     "run-sequence": "^2.2.1"
   },
   "name": "nspack-demo-vue",
