--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gulp-cli": "^2.0.1",
     "gulp-util": "^3.0.8",
     "nspack": "^9.1.3",
-    "run-sequence": "^2.2.1"
+    "run-sequence": "^2.2.1",
+    "touch": "^3.1.0"
   },
   "name": "nspack-demo-vue",
   "version": "1.0.0",
